--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,21 @@
             <version>5.1.49</version>
             <scope>test</scope>
         </dependency>
+        <!--Unfortunately due the binary license there is no public repository with the Oracle Driver JAR.
+Will try to download it from otn-maven-repo
+Download latest jar from http://www.oracle.com/technology/software/tech/java/sqlj_jdbc/index.html.
+mvn install:install-file -Dfile=ojdbc5.jar -DgroupId=com.oracle -DartifactId=ojdbc5 -Dversion=11.2.0.3.0 -Dpackaging=jar -DgeneratePom=true
+-->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc5</artifactId>
+            <version>11.2.0.3.0</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.github.gobars</groupId>
             <artifactId>id</artifactId>
-            <version>0.0.5</version>
+            <version>0.0.6</version>
         </dependency>
 
         <dependency>
