--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.gobars</groupId>
     <artifactId>httplog</artifactId>
-    <version>0.0.24-SNAPSHOT</version>
+    <version>0.0.25-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>httplog</name>
@@ -97,12 +97,15 @@ Will try to download it from otn-maven-repo
 Download latest jar from http://www.oracle.com/technology/software/tech/java/sqlj_jdbc/index.html.
 mvn install:install-file -Dfile=ojdbc5.jar -DgroupId=com.oracle -DartifactId=ojdbc5 -Dversion=11.2.0.3.0 -Dpackaging=jar -DgeneratePom=true
 -->
+
+         <!--
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc5</artifactId>
             <version>11.2.0.3.0</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -112,7 +115,7 @@ mvn install:install-file -Dfile=ojdbc5.jar -DgroupId=com.oracle -DartifactId=ojd
         <dependency>
             <groupId>com.github.gobars</groupId>
             <artifactId>id</artifactId>
-            <version>0.0.11</version>
+            <version>0.0.14-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -310,20 +313,19 @@ mvn install:install-file -Dfile=ojdbc5.jar -DgroupId=com.oracle -DartifactId=ojd
             </build>
         </profile>
     </profiles>
-    <!--
 
-        <distributionManagement>
-            <repository>
-                <id>releases</id>
-                <name>Internal Releases</name>
-                <url>http://192.168.126.160:8088/nexus/content/repositories/releases/</url>
-            </repository>
-            <snapshotRepository>
-                <id>snapshots</id>
-                <name>Internal Releases</name>
-                <url>http://192.168.126.160:8088/nexus/content/repositories/snapshots/</url>
-            </snapshotRepository>
-        </distributionManagement>
-    -->
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Internal Releases</name>
+            <url>http://192.168.131.36:8088/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Internal Releases</name>
+            <url>http://192.168.131.36:8088/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
