--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 
     <groupId>com.github.gobars</groupId>
     <artifactId>httplog</artifactId>
-    <version>0.0.25-SNAPSHOT</version>
+    <version>0.0.24-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>httplog</name>
     <description>a http logger</description>
-    <url>http://github.com/gobars/httplog</url>
+    <url>https://github.com/gobars/httplog</url>
 
     <!-- export GPG_TTY=$(tty) &&  LANGUAGE=en mvn clean install -Prelease-->
     <repositories>
@@ -115,7 +115,7 @@ mvn install:install-file -Dfile=ojdbc5.jar -DgroupId=com.oracle -DartifactId=ojd
         <dependency>
             <groupId>com.github.gobars</groupId>
             <artifactId>id</artifactId>
-            <version>0.0.14-SNAPSHOT</version>
+            <version>0.0.13</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
