--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
     <groupId>com.github.gobars</groupId>
     <artifactId>httplog</artifactId>
-    <version>0.0.24-SNAPSHOT</version>
+    <version>0.0.25-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>httplog</name>
     <description>a http logger</description>
     <url>https://github.com/gobars/httplog</url>
 
-    <!-- export GPG_TTY=$(tty) &&  LANGUAGE=en mvn clean install -Prelease-->
+    <!-- export GPG_TTY=$(tty) &&  LANGUAGE=en mvn clean install -Prelease -DskipTests-->
     <repositories>
         <repository>
             <id>otn-maven-repo</id>
